# ros2-foxy-rosbag

./: .gitignore  LICENSE  README.md
hooks/: config-manager.sh  configure.sh
snap/: snapcraft.yaml
src/: .gitignore
src/core/: .gitignore  CMakeLists.txt  README.md  nova.sh  package.xml
src/core/launch/: arm.launch.py  arm_spoof.launch.py  base.launch.py  rover.launch.py  science.launch.py  visualisation.launch.py
src/core/log/: latest_list
src/core/macros/: alias.sh  auto_cameras.sh  build.sh  can.sh  catkin_install.sh  nova_setup.sh  pull.sh  ros.sh  wifi.sh
src/core/msg/: AlvarMarker.msg  AlvarMarkers.msg  ArmControlScheme.msg  AutonomousGoal.msg  CMDFeedback.msg  CamsConnected.msg  DistanceData.msg  DriveInput.msg  DriveVel.msg  EMCData.msg  EndEffectorInput.msg  HydraprobeData.msg  InputGamepad.msg  InputJoystick.msg  Map2D.msg  Point2D.msg  RadioStatus.msg  RoverPose.msg  RoverPoseGPS.msg  SpectrometerData.msg  Waypoint.msg  Waypoints.msg  WheelData.msg
src/core/settings/: .vimrc  ROS_DEFAULT_FASTRTPS_PROFILES.xml
src/core/srv/: ArmConfigInfo.srv  CameraCommand.srv  GimbalCommand.srv  PIDTune.srv  PathPlanningRequest.srv  RFIDCommand.srv  ScienceCommand.srv
src/ublox_dgnss/: README.md
src/ublox_dgnss/ublox_dgnss/launch/: base.launch.py  rover.launch.py
src/ublox_dgnss/ublox_dgnss_node/: CMakeLists.txt  package.xml
src/ublox_dgnss/ublox_dgnss_node/include/ublox_dgnss_node/: usb.hpp
src/ublox_dgnss/ublox_dgnss_node/include/ublox_dgnss_node/ubx/: ubx_cfg_item.hpp  ubx_msg.hpp  ubx_nav.hpp  ubx_rxm.hpp
src/ublox_dgnss/ublox_dgnss_node/include/ublox_dgnss_node/ubx/nav/: ubx_nav_sig.hpp  ubx_nav_svin.hpp
src/ublox_dgnss/ublox_dgnss_node/include/ublox_dgnss_node/ubx/rxm/: ubx_rxm_rtcm.hpp
src/ublox_dgnss/ublox_dgnss_node/src/: ublox_dgnss_node.cpp  usb.cpp
src/ublox_dgnss/ublox_ubx_interfaces/srv/: ColdStart.srv
src/ublox_dgnss/ublox_ubx_msgs/: CMakeLists.txt
src/ublox_dgnss/ublox_ubx_msgs/msg/: NavSignal.msg  RTCM3.msg  UBXNavSIG.msg  UBXNavSVIN.msg  UBXRxmRTCM.msg
wrappers/: ros2-custom-ws.sh  source-custom-ws.sh
